# prosa

./: .ackrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  LICENSE  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-prosa-refinements.opam  coq-prosa.opam  create_makefile.sh  package.json  rocq-prosa-refinements.opam  rocq-prosa.opam
analysis/: README.md
analysis/abstract/: abstract_rta.v  abstract_seq_rta.v  busy_interval.v  definitions.v  (+5 more)
behavior/: README.md  all.v  arrival_sequence.v  job.v  ready.v  schedule.v  service.v  task.v
classic/: README.md
doc/: guidelines.md  tactics.md  tutorial.v
model/: README.md  policy_tdma.v  suspension.v
restructuring/: README.md
results/: README.md
scripts/: Makefile.alectryon  Makefile.coq.patch  Makefile.patch  alectryon.sh  alectryon_custom_driver.py  check-axiom-free.sh  check-validation-output.sh  comments.py  extract-comments.py  flag-typos-in-Markdown.sh  flag-typos-in-comments.sh  known-long-proofs.json  mk-opam-switch.sh  module-toc-order.py  proofloc.py  prosa-linter.py  record-proof-state.py  reflow-comments.py  spell-check-changed.sh  spell-check-files.sh  spell-check-llm.sh  wordlist.pws
util/: all.v  bigcat.v  bigop.v  div_mod.v  epsilon.v  find_seq.v  fixpoint.v  int.v  lcmseq.v  list.v  minmax.v  nat.v  nondecreasing.v  notation.v  option.v  pick.v  poet.v  rel.v  rewrite_facilities.v  search_arg.v  seqset.v  setoid.v  sorting.v  ssrlia.v  step_function.v  subadditivity.v  sum.v  superadditivity.v  supremum.v  tactics.v  tactics_gr.v  unit_growth.v
(+944 files in other folders)
